[gd_scene load_steps=5 format=3 uid="uid://bbhrgt1wcfknw"]

[ext_resource type="Script" path="res://assets/scripts/load_selector.gd" id="1_81rjl"]
[ext_resource type="Texture2D" uid="uid://6okk0fcua4fm" path="res://assets/sprites/backgrounds/temp/temp_bar_area.jpg" id="2_4hhqj"]
[ext_resource type="PackedScene" uid="uid://ebhgi2kemk33" path="res://scenes/scene_audio_container.tscn" id="3_i7lte"]
[ext_resource type="AudioStream" uid="uid://ccrdo1ew8ilpk" path="res://assets/sounds/ambience/sangria_amb_pub_vazio.wav" id="4_nd06d"]

[node name="LoadSelector" type="Control" node_paths=PackedStringArray("load_card_containers", "scene_audio_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81rjl")
saves_folder = "res://saves"
load_card_containers = NodePath("ColorRect/VBoxContainer")
scene_audio_container = NodePath("SceneAudioContainer")

[node name="BackgroundControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="Background" type="TextureRect" parent="BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4hhqj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 560.0
offset_top = 64.0
offset_right = 1360.0
offset_bottom = 1016.0

[node name="SceneAudioContainer" parent="." instance=ExtResource("3_i7lte")]
ambience = ExtResource("4_nd06d")

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 1840.0
offset_top = 32.0
offset_right = 1888.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
text = "<"

[connection signal="pressed" from="MainMenu" to="." method="return_to_menu"]
